2014-11-22  Holger Seelig  <holger.seelig@yahoo.de>

	* Scale.svg:
	* Rotate.svg:
	* BrowserWindow.xml:
	* TextureCoordinateEditor.xml:
	* X3DTextureCoordinateEditorInterface.h:
	* ColorPerVertexEditor.cpp:
	* X3DTextureCoordinateEditorInterface.cpp:
	* TextureCoordinateEditor.h:
	* TextureCoordinateEditor.cpp: 

2014-11-22  Holger Seelig  <holger.seelig@yahoo.de>

	* ColorPerVertexEditor.cpp:
	* TextureCoordinateEditor.h:
	* TextureCoordinateEditorRightPreview.x3dv:
	* TextureCoordinateEditor.cpp: 

2014-11-21  Holger Seelig  <holger.seelig@yahoo.de>

	* BrowserWindow.xml:
	* Clockwise.svg:
	* Counterclockwise.svg:
	* TextureCoordinateEditor.xml:
	* X3DTextureCoordinateEditorInterface.h:
	* X3DTextureCoordinateEditorInterface.cpp:
	* TextureCoordinateEditorLeftPreview.x3dv:
	* TextureCoordinateEditor.h:
	* TextureCoordinateEditor.cpp: 

2014-11-21  Holger Seelig  <holger.seelig@yahoo.de>

	* TextureCoordinateEditor.xml:
	* X3DTextureCoordinateEditorInterface.h:
	* ColorPerVertexEditor.cpp:
	* X3DTextureCoordinateEditorInterface.cpp:
	* TextureCoordinateEditor.h:
	* TextureCoordinateEditor.cpp: 

2014-11-21  Holger Seelig  <holger.seelig@yahoo.de>

	* TextureCoordinateEditor.xml:
	* TextureCoordinateEditorLeftPreview.x3dv: 

2014-11-21  Holger Seelig  <holger.seelig@yahoo.de>

	* Flop.svg:
	* Flip.svg:
	* Shading.svg:
	* BrowserWindow.xml:
	* TextureCoordinateEditor.xml:
	* X3DTextureCoordinateEditorInterface.h:
	* ColorPerVertexEditor.cpp:
	* X3DTextureCoordinateEditorInterface.cpp:
	* TextureCoordinateEditor.h:
	* TextureCoordinateEditor.cpp: 

2014-11-21  Holger Seelig  <holger.seelig@yahoo.de>

	* TextureCoordinateEditor.cpp: 

2014-11-20  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DTextureCoordinateEditorInterface.h:
	* X3DTextureCoordinateEditorInterface.cpp: 

2014-11-20  Holger Seelig  <holger.seelig@yahoo.de>

	* FaceSelection.h:
	* FaceSelection.cpp:
	* X3DBrowserEditor.cpp:
	* TextureCoordinateEditor.xml:
	* ColorPerVertexEditor.cpp: