@@ -1,5 +1,9 @@
 2014-11-22  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* TextureCoordinateEditor.cpp: 
+
+2014-11-22  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Scale.svg:
 	* Rotate.svg:
 	* BrowserWindow.xml:
